WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111236
getComputedStyle not implemented for -webkit-columns shorthand
https://bugs.webkit.org/show_bug.cgi?id=111236
Summary
getComputedStyle not implemented for -webkit-columns shorthand
Uday Kiran
Reported
2013-03-01 16:52:56 PST
Implement getComputedStyle for -webkit-columns shorthand.
Attachments
Patch
(11.63 KB, patch)
2013-03-01 17:04 PST
,
Uday Kiran
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Uday Kiran
Comment 1
2013-03-01 17:04:07 PST
Created
attachment 191075
[details]
Patch
WebKit Review Bot
Comment 2
2013-03-04 11:01:34 PST
Comment on
attachment 191075
[details]
Patch Clearing flags on attachment: 191075 Committed
r144647
: <
http://trac.webkit.org/changeset/144647
>
WebKit Review Bot
Comment 3
2013-03-04 11:01:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug