getComputedStyle not implemented for -webkit-columns shorthand https://bugs.webkit.org/show_bug.cgi?id=111236

Patch by Uday Kiran <udaykiran@motorola.com> on 2013-03-04
Reviewed by Alexis Menard.

Source/WebCore:

Implement getComputedStyle for -webkit-columns shorthand.

Test: fast/css/getComputedStyle/getComputedStyle-webkit-columns-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add test to check getComputedStyle for -webkit-columns.

* fast/css/getComputedStyle/getComputedStyle-webkit-columns-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-webkit-columns-shorthand.html: Added.

Canonical link: https://commits.webkit.org/129691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144647 268f45cc-cd09-0410-ab3c-d52691b4dbfc